tests/compile-fail/generic_event_distributed_type_parameters.rs
use sml::sml;

pub struct First<T>(T);
pub struct Second<U>(U);

sml! {
    Distributed<T, U> {
        *Idle + event<First<T>> = Ready,
         Ready + event<Second<U>> = X,
    }
}

fn main() {}
